--- a/01 - Babylonjs/index.html
+++ b/01 - Babylonjs/index.html
@@ -9,32 +9,14 @@
     #renderCanvas { width: 100%; height: 100%; touch-action: none; display: block; }
   </style>
   <link rel="stylesheet" href="src/styles.css">
+  <link rel="icon" href="data:,">
 </head>
 <body>
   <canvas id="renderCanvas"></canvas>
 
-  <!-- BabylonJS CDN -->
+  <!-- BabylonJS CDN + loaders para glTF/GLB -->
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
-  <script type="module" src="src/main.js"></script>
-</body>
-</html><!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BabylonJS - Local Playground</title>
-  <style>
-    html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden; }
-    #renderCanvas { width: 100%; height: 100%; touch-action: none; display: block; }
-  </style>
-</head>
-<body>
-  <canvas id="renderCanvas"></canvas>
-
-  <!-- Styles and scripts -->
-  <link rel="stylesheet" href="src/styles.css">
-  <!-- BabylonJS CDN -->
-  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
   <script type="module" src="src/main.js"></script>
 </body>
 </html>
